--- a/p8105_hw5_crd2162.md
+++ b/p8105_hw5_crd2162.md
@@ -3,258 +3,109 @@ p8105_hw5_crd2162
 Caleigh Dwyer
 2023-11-13
 
-## Problem 1: Homicide Data
+## Problem 1
 
-The chunk below loads data from the Washington Post on homicide trends
-in the 50 largest US cities.
+For this problem, we are interested in data gathered and made public by
+*The Washington Post* on homicides in 50 large U.S. cities. The code
+chunk below imports and cleans the data.
 
 ``` r
-murder_data =
-  read_csv("./data/homicide-data.csv") |> 
-  janitor::clean_names() |> 
-  select(-uid, -victim_last, -victim_first) |> 
-  unite(city_state, city, state, sep = ", ") |> 
-  mutate(city_state = 
-           if_else(
-             city_state == "Tulsa, AL", "Tulsa, OK", city_state
-           ))
+homicide_df = 
+  read_csv("data/homicide-data.csv", na = c("", "NA", "Unknown")) %>%
+  mutate(
+    city_state = str_c(city, state, sep = ", "),
+    resolution = case_when(
+      disposition == "Closed without arrest" ~ "unsolved",
+      disposition == "Open/No arrest"        ~ "unsolved",
+      disposition == "Closed by arrest"      ~ "solved"
+    )
+  ) %>% 
+  filter(city_state != "Tulsa, AL") 
 ```
 
     ## Rows: 52179 Columns: 12
     ## ── Column specification ────────────────────────────────────────────────────────
     ## Delimiter: ","
-    ## chr (9): uid, victim_last, victim_first, victim_race, victim_age, victim_sex...
-    ## dbl (3): reported_date, lat, lon
+    ## chr (8): uid, victim_last, victim_first, victim_race, victim_sex, city, stat...
+    ## dbl (4): reported_date, victim_age, lat, lon
     ## 
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-The dataset contains information on 52179 criminal homicides reported
-from 2007 to 2015. The dataset describes the race, age, and sex of each
-victim, the city and state in which the homicide occurred, the exact
-latitude and longitude of the crime, and the “disposition” of the crime,
-which describes whether the case is open or closed and whether an arrest
-was made. One homicide was misattributed to Tulsa, Alabama when the
-latitude and longitude indicate that the crime occurred in Oklahoma;
-this was corrected in the cleaned dataset.
+The resulting dataframe has 52178 entries, on variables that include the
+victim name, race, age, and sex; the date the homicide was reported; and
+the location of the homicide. In cleaning, I created a `city_state`
+variable that includes both city and state, and a `resolution` variable
+to indicate whether the case was closed by arrest. I also excluded one
+entry in Tulsa, AL, which is not a major US city and is most likely a
+data entry error.
 
-The following chunk summarizes the total number of homicides in each
-city. Chicago, Philadelphia, Houston, Baltimore, and Detroit had the
-highest number of total homicides, in that order.
+In the next code chunk, I group within cities and summarize to produce
+the total number of homicides and the number that are solved.
 
 ``` r
-murder_data |> 
-  count(city_state) |> 
-  arrange(desc(n)) |> 
-  knitr::kable()
-```
-
-| city_state         |    n |
-|:-------------------|-----:|
-| Chicago, IL        | 5535 |
-| Philadelphia, PA   | 3037 |
-| Houston, TX        | 2942 |
-| Baltimore, MD      | 2827 |
-| Detroit, MI        | 2519 |
-| Los Angeles, CA    | 2257 |
-| St. Louis, MO      | 1677 |
-| Dallas, TX         | 1567 |
-| Memphis, TN        | 1514 |
-| New Orleans, LA    | 1434 |
-| Las Vegas, NV      | 1381 |
-| Washington, DC     | 1345 |
-| Indianapolis, IN   | 1322 |
-| Kansas City, MO    | 1190 |
-| Jacksonville, FL   | 1168 |
-| Milwaukee, wI      | 1115 |
-| Columbus, OH       | 1084 |
-| Atlanta, GA        |  973 |
-| Oakland, CA        |  947 |
-| Phoenix, AZ        |  914 |
-| San Antonio, TX    |  833 |
-| Birmingham, AL     |  800 |
-| Nashville, TN      |  767 |
-| Miami, FL          |  744 |
-| Cincinnati, OH     |  694 |
-| Charlotte, NC      |  687 |
-| Oklahoma City, OK  |  672 |
-| San Francisco, CA  |  663 |
-| Pittsburgh, PA     |  631 |
-| New York, NY       |  627 |
-| Boston, MA         |  614 |
-| Tulsa, OK          |  584 |
-| Louisville, KY     |  576 |
-| Fort Worth, TX     |  549 |
-| Buffalo, NY        |  521 |
-| Fresno, CA         |  487 |
-| San Diego, CA      |  461 |
-| Stockton, CA       |  444 |
-| Richmond, VA       |  429 |
-| Baton Rouge, LA    |  424 |
-| Omaha, NE          |  409 |
-| Albuquerque, NM    |  378 |
-| Long Beach, CA     |  378 |
-| Sacramento, CA     |  376 |
-| Minneapolis, MN    |  366 |
-| Denver, CO         |  312 |
-| Durham, NC         |  276 |
-| San Bernardino, CA |  275 |
-| Savannah, GA       |  246 |
-| Tampa, FL          |  208 |
-
-The following chunk summarizes the total number of unsolved homicides in
-each city, or those in which the disposition is “Closed without arrest”
-or “Open/No arrest”. Chicago, Baltimore, Houston, Detroit, and
-Philadelphia had the highest number of unsolved homicides, in that
-order.
-
-``` r
-murder_data |> 
-  filter(disposition %in% c("Closed without arrest", "Open/No arrest")) |> 
-  count(city_state) |> 
-  arrange(desc(n)) |> 
-  knitr::kable()
-```
-
-| city_state         |    n |
-|:-------------------|-----:|
-| Chicago, IL        | 4073 |
-| Baltimore, MD      | 1825 |
-| Houston, TX        | 1493 |
-| Detroit, MI        | 1482 |
-| Philadelphia, PA   | 1360 |
-| Los Angeles, CA    | 1106 |
-| New Orleans, LA    |  930 |
-| St. Louis, MO      |  905 |
-| Dallas, TX         |  754 |
-| Jacksonville, FL   |  597 |
-| Indianapolis, IN   |  594 |
-| Washington, DC     |  589 |
-| Columbus, OH       |  575 |
-| Las Vegas, NV      |  572 |
-| Oakland, CA        |  508 |
-| Phoenix, AZ        |  504 |
-| Kansas City, MO    |  486 |
-| Memphis, TN        |  483 |
-| Miami, FL          |  450 |
-| Milwaukee, wI      |  403 |
-| Atlanta, GA        |  373 |
-| San Antonio, TX    |  357 |
-| Birmingham, AL     |  347 |
-| Pittsburgh, PA     |  337 |
-| San Francisco, CA  |  336 |
-| Oklahoma City, OK  |  326 |
-| Buffalo, NY        |  319 |
-| Boston, MA         |  310 |
-| Cincinnati, OH     |  309 |
-| Nashville, TN      |  278 |
-| Stockton, CA       |  266 |
-| Louisville, KY     |  261 |
-| Fort Worth, TX     |  255 |
-| New York, NY       |  243 |
-| Charlotte, NC      |  206 |
-| Baton Rouge, LA    |  196 |
-| Tulsa, OK          |  193 |
-| Minneapolis, MN    |  187 |
-| San Diego, CA      |  175 |
-| San Bernardino, CA |  170 |
-| Denver, CO         |  169 |
-| Fresno, CA         |  169 |
-| Omaha, NE          |  169 |
-| Long Beach, CA     |  156 |
-| Albuquerque, NM    |  146 |
-| Sacramento, CA     |  139 |
-| Savannah, GA       |  115 |
-| Richmond, VA       |  113 |
-| Durham, NC         |  101 |
-| Tampa, FL          |   95 |
-
-We will now use the prop.test function to estimate the proportion of
-homicides that are unsolved in Baltimore, MD. The estimated proportion
-of unsolved homicides in Baltimore was 64.6% with a confidence interval
-of 62.8%-66.3%
-
-``` r
-prop_bmd =
-murder_data |> 
-  filter(city_state == "Baltimore, MD") |> 
+city_homicide_df = 
+  homicide_df %>% 
+  select(city_state, disposition, resolution) %>% 
+  group_by(city_state) %>% 
   summarize(
-    total_murder = n(),
-    total_unsolved = sum(
-           disposition %in% c("Closed without arrest", "Open/No arrest")
-         )) |> 
-  with(prop.test(total_unsolved,total_murder)) |> 
-  broom::tidy() |> 
-  select(estimate, conf.low, conf.high)
-
-print(prop_bmd)
+    hom_total = n(),
+    hom_unsolved = sum(resolution == "unsolved"))
 ```
 
-    ## # A tibble: 1 × 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.646    0.628     0.663
-
-The chunk below creates a function that applies the prop.test used
-above, producing the estimated proportion of unsolved murders for each
-input along with the confidence interval. Then, map is used to pass a
-list of the 50 cities through the function, producing the output for
-each city. The outputs are then consolidated into a tibble.
+Focusing only on Baltimore, MD, I can use the `prop.test` and
+`broom::tidy` functions to obtain an estimate and CI of the proportion
+of unsolved homicides in that city. The table below shows those values.
 
 ``` r
-# function 
-prop_function = function(dataset, name) {
-  prop = dataset |> 
-  filter(city_state == name) |> 
-  summarize(
-    total_murder = n(),
-    total_unsolved = sum(
-           disposition %in% c("Closed without arrest", "Open/No arrest")
-         )) |> 
-  with(prop.test(total_unsolved,total_murder)) |> 
-  broom::tidy() |> 
-  select(estimate, conf.low, conf.high)
-  return(prop)
-}
+bmore_test = 
+  prop.test(
+    x = filter(city_homicide_df, city_state == "Baltimore, MD") %>% pull(hom_unsolved),
+    n = filter(city_homicide_df, city_state == "Baltimore, MD") %>% pull(hom_total)) 
 
-cities = unique(murder_data$city_state)
-table = map(cities, ~ prop_function(murder_data, .x))
-
-# Using list columns
-# Unnesting the list column
-prob_unsolved = 
-  tibble(city = cities, prop = table) |> 
-  unnest(cols = c(prop))
+broom::tidy(bmore_test) %>% 
+  knitr::kable(digits = 3)
 ```
 
-The chunk below produces a graph showing the estimated proportion of
-unsolved murders for each city (on a scale of 0 to 1) along with
-corresponding confidence intervals. The graph shows that Chicago, New
-Orleans, Baltimore, San Bernardino, and Buffalo had the five highest
-proportions of unsolved murders. Notably, the confidence interval for
-the proportion of unsolved murders was very narrow for Chicago and much
-wider for San Bernardino and Buffalo.
+| estimate | statistic | p.value | parameter | conf.low | conf.high | method                                               | alternative |
+|---------:|----------:|--------:|----------:|---------:|----------:|:-----------------------------------------------------|:------------|
+|    0.646 |   239.011 |       0 |         1 |    0.628 |     0.663 | 1-sample proportions test with continuity correction | two.sided   |
+
+Building on this code, I can use functions in the `purrr` package to
+obtain estimates and CIs for the proportion of unsolved homicides in
+each city in my dataset. The code below implements this analysis.
 
 ``` r
-unsolved_plot =
-  prob_unsolved |> 
-  mutate(city = forcats::fct_reorder(city, estimate)) |> 
-ggplot(aes(x = city, y = estimate, fill = city))+
-  geom_bar(stat = "identity")+
-   geom_errorbar(
-    aes(ymin = conf.low, ymax = conf.high),
-    position = position_dodge(width = 0.9),
-    width = 0.25
-  ) +
-  labs(title = "Estimated proportion of unsolved murders by city", x = "City", y = "Proportion of murders that are unsolved") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-print(unsolved_plot)
+test_results = 
+  city_homicide_df %>% 
+  mutate(
+    prop_tests = map2(hom_unsolved, hom_total, \(x, y) prop.test(x = x, n = y)),
+    tidy_tests = map(prop_tests, broom::tidy)) %>% 
+  select(-prop_tests) %>% 
+  unnest(tidy_tests) %>% 
+  select(city_state, estimate, conf.low, conf.high) %>% 
+  mutate(city_state = fct_reorder(city_state, estimate))
 ```
 
-<img src="p8105_hw5_crd2162_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+Finally, I make a plot showing the estimate (and CI) of the proportion
+of unsolved homicides in each city.
 
-## Problem 2:Experimental data
+``` r
+test_results %>% 
+  mutate(city_state = fct_reorder(city_state, estimate)) %>% 
+  ggplot(aes(x = city_state, y = estimate)) + 
+  geom_point() + 
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+<img src="p8105_hw5_crd2162_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
+
+This figure suggests a very wide range in the rate at which homicides
+are solved – Chicago is noticeably high and, given the narrowness of the
+CI, likely is the location of many homicides.
+
+## Problem 2: Experimental data
 
 The following chunk uses a function to read multiple csv files from a
 zip folder. Each .csv file represents longitudinal data for either a
@@ -304,7 +155,11 @@ tidy_data =
 ```
 
 A spaghetti plot is created in the chunk below showing observations on
-each subject over time by group.
+each subject over time by group. This graph shows that the experimental
+group had greater change in the value of the observation over time, as
+the value of the observation at week 8 is higher among all experimental
+group subjects compared to control group, even thought experimental and
+control group subjects had simillar observation values at baseline.
 
 ``` r
 subject_graph =
@@ -318,4 +173,56 @@ subject_graph =
 print(subject_graph)
 ```
 
-<img src="p8105_hw5_crd2162_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+<img src="p8105_hw5_crd2162_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+
+## Problem 3: Simulation
+
+``` r
+set.seed(1)
+
+#write a function to define parameters
+sim_power = function(n = 30, sigma = 5, mu = 0){
+  sim_data = tibble(
+    x = rnorm(n, mean = mu, sd = sigma),
+  )
+  
+  sim_data |> 
+    summarize(
+      mu_hat = mean(x),
+      sigma_hat = sd(x)
+    )
+  
+  return(sim_data)
+}
+
+
+#create dataset including 5000 iterations of function above
+sim_results =
+  expand_grid(
+    n = 30,
+    iter = 1:5000
+  ) |> 
+  mutate(
+    estimate_df = map(n, sim_power)
+  )
+
+#write function to run t test. Mu can be changed.
+sim_power_repeat = function(mu) {
+  df = expand_grid(
+    n = 30,
+    iter = 1:5000
+  ) |> 
+  mutate(
+    mean = mu,
+    estimate_df = map(n, sim_power),
+    estimates = map(estimate_df, ~ broom::tidy(t.test(.x, mu = mu)))
+  ) |> 
+  unnest(c(estimates))
+  return(df)
+}
+
+#run t test function nfor 7 different mu and combine outputs
+sim_results_df =   
+  map(0:6, ~ sim_power_repeat(.x)) |> 
+  bind_rows()
+```
