--- a/p8105_hw5_crd2162.md
+++ b/p8105_hw5_crd2162.md
@@ -318,7 +318,15 @@ print(sim_plot_2)
 
 Lastly, we’ll create a plot that shows the average estimate of mu hat
 only in samples for which the null was rejected on the y axis and the
-true value of mu on the x axis.
+true value of mu on the x axis. This plot looks almost the same as the
+second plot created above, despite the fact that it only includes sample
+means from in which the null hypothesis was rejected. It does not appear
+that the sample average of mu hat across tests for which the null is
+rejected approximates the true value of mu. The sample average of mu hat
+across tests is very close to 0. This is likely because the effect size
+and sample size are both very small for this simulation, reducing the
+power. A higher level of power is necessary to reject a false null
+hypothesis.
 
 ``` r
 sim_plot_3 =
